<resources>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">信息</string>


    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_about">关于安浪</string>
    <string name="action_website">官网</string>
    <string name="action_taobao">淘宝店</string>
    <string name="action_scanQRcode">扫一扫</string>
    <string name="action_compile">PHP编译器</string>
    <string name="action_wechat">官方微信</string>
    <string name="action_exit">返回</string>
    <string name="title_activity_about">关于安浪</string>
    <string name="title_activity_settings">设置</string>

    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">综合</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">推送提醒</string>

    <string name="pref_title_new_message_notifications">新推送信息</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>

    <string name="app_name">酷编程</string>
    <string name="clean">"清除所有数据"</string>
    <string name="about">关于</string>
    <string name="delete">删除</string>
    <string name="are_you_sure">确认删除？</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="title">起个名字</string>
    <string name="content">写点什么呢~</string>
    <string name="add_picture">添加照片</string>
    <string name="exit">再按一次，返回主界面</string>
    <string name="empty">未添加笔记</string>
    <string name="ok">确定</string>

    <string name="confirm_exit">确认退出代码编辑器？</string>
    <string name="mainmenu_home">主目录</string>
    <string name="mainmenu_refresh">刷新</string>
    <string name="mainmenu_createdir">新建文件夹</string>
    <string name="mainmenu_exit">退出</string>
    <string name="file_rename">重命名</string>
    <string name="file_delete">删除</string>
    <string name="file_info">详情</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_namecannotempty">文件名不能为空</string>
    <string name="file_create_fail">创建文件失败！</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_paste">粘贴</string>
    <string name="file_copy">复制</string>
    <string name="file_move">移动</string>
    <string name="file_create">新建</string>
    <string name="file_copy_fail">复制文件失败！</string>
    <string name="file_move_fail">移动文件失败！</string>
    <string name="file_notexists">文件不存在！</string>












    <string-array name="pic">
        <item>照相机</item>
        <item>相册</item>
    </string-array>
</resources>
